--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,108 @@
-@tailwind base;
+/* @tailwind base; */
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+
+
+.abc{
+  width: 350px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.drag1{
+  margin: 20px;
+}
+.text-liya{
+  font-size: 8px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.headDetail{
+  display: flex;
+  justify-content: center;
+  background-color: black;
+  padding: 20px;
+  color: white; 
+}
+.main-hai{
+  width: 100%;
+  height: 625px;
+  background-image: url("https://img.freepik.com/free-vector/comic-style-wallpaper_23-2148807393.jpg");
+  background-size: cover;
+  
+}
+.link-wala{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  list-style: none;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.drag1:hover{
+  cursor: pointer;
+}
+.body-img{
+ 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 200px;
+}
+.ye-hai-main{
+  background-image: url("https://img.freepik.com/free-vector/comic-style-background_23-2148831780.jpg?size=626&ext=jpg&ga=GA1.1.1292351815.1712102400&semt=ais");
+   background-size: cover;
+   background-repeat: no-repeat;
+}
+.input1{
+  background-color: rgb(196, 196, 196);
+  padding: 08px;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin: 5px;
+}
+.btn{
+  background-color: rgb(78, 248, 78);
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid black;
+}
+.btn:hover{
+ background-color: rgb(255, 69, 69);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.main-div{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-image: url("../app/hahahaahahahah.jpg");
+  background-size: contain;
+  
+}
+.nested-div{
+  margin-bottom: 5px;
+  margin-top: 10pxn;
+  color: white;
+  
+
+}
+.nested-div1{
+  background-color: black;
+  border-radius: 20px;
+  padding: 20px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  
+}
+
+.heading{
+  display: flex;
+  justify-content: center;
+  background-color: black;
+  color: white;
+  font-size: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.img-dev{
+  margin-left: 300px;
 }
